# price-recommendation

./: README.md  pyproject.toml
app/: Untitled.ipynb  app_streamlit.py  main.py
app/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
app/data/: product_prices.csv
app/models/: price_model.py
app/scrapers/: scraper_example.py
app/services/: price_service.py
app/utils/: preprocessing.py
