[tool.poetry]
name = "price-recommendation"
version = "0.1.0"
description = "A price recommendation chatbot using FastAPI and Streamlit."
authors = ["Vety Bhakti Lestari"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
streamlit = "^1.41.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"